# MPRGPSolver

./: CMakeLists.txt  MPRGPProjection.h  README.md  example.cpp
