PROJECT(MPRGPSolver)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)

SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O3 -DHAVE_NAMESPACES -ldl -Wall -std=c++11")
# SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -g -O0 -Wall -std=c++11")

SET(Boost_USE_STATIC_LIBS        ON)
SET(Boost_USE_MULTITHREADED      ON)
SET(Boost_USE_STATIC_RUNTIME    OFF)
FIND_PACKAGE( Boost COMPONENTS filesystem system REQUIRED)

FIND_PACKAGE(Eigen3 REQUIRED)
IF(EIGEN3_FOUND)
  INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR})
ENDIF(EIGEN3_FOUND)

INCLUDE_DIRECTORIES(
  
  /usr/local/include
  ${PROJECT_SOURCE_DIR}/src
  )

SET(APP_NAME mprgp_test)

AUX_SOURCE_DIRECTORY(. mprgp_test_src)

ADD_EXECUTABLE(${APP_NAME} 
  ${mprgp_test_src}
  )

TARGET_LINK_LIBRARIES(${APP_NAME}
  
  ${Boost_LIBRARIES}
  )